# kv-memory-modules

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.es.md  README.md  pyproject.toml  requirements.txt
data/: memoria-agente.md  memoria-ancla.md  memoria-general.md  memoria-grande.md  memoria-hist.md  memoria-ops.md  memoria-tec.md  prefijo-largo.md  preguntas-e10.json  system-agente.md
docs/: ARCHITECTURE.es.md  ARCHITECTURE.md  EVIDENCE.es.md  EVIDENCE.md  NOTEBOOK.es.md  NOTEBOOK.md
experiments/: bateria.py  bateria2.py  bateria3.py  bateria3b.py  bateria4.py  bateria5.py  bateria6.py  bateria7.py  bateria8.py  common.py  comp_bench.py  e12.py  e13v2.py  e14.py  e15.py  e15b.py  e16.py  e17.py  e18.py  e19.py  fase3_vllm.py  gen_corpus.py  hibrido0.py  hibrido1.py  hibrido2.py  hibrido3.py  hibrido4.py  stats_recall.py
paper/: PAPER.md
patches/: README.md  llama.cpp-b10068-mtp-kv-state-shared-cells.patch  llama.cpp-b10068-server-slots-draft-state.patch
results/: SHA256SUMS.txt  resultados-bateria.json  resultados-bateria2-coder-E1.json  resultados-bateria2-coder-E2.json  resultados-bateria2-coder-E3.json  resultados-bateria2-gemma3-4b-srv.json  resultados-bateria2-llama.json  resultados-bateria2-qwen.json  resultados-bateria3-coder.json  resultados-bateria3-llama.json  resultados-bateria3-qwen.json  resultados-bateria3b-coder.json  resultados-bateria3b-llama.json  resultados-bateria3b-qwen.json  resultados-bateria4-coder.json  resultados-bateria4-llama.json  resultados-bateria4-qwen.json  resultados-bateria5-qwen.json  (+42 more)
(+19 files in other folders)
