[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kmd"
version = "0.1.0"
description = "Compile Markdown agent memories into relocatable, composable KV-cache modules (.kmd) for llama.cpp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luis Andrés González Picazo" }]
keywords = ["llm", "kv-cache", "llama.cpp", "agent-memory", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy"]

[project.scripts]
mdc = "kmd.mdc:main"

[project.urls]
Homepage = "https://github.com/k0n1m4k1/kv-memory-modules"
Repository = "https://github.com/k0n1m4k1/kv-memory-modules"

[tool.setuptools.packages.find]
where = ["src"]
